cabal-version:      2.4
name:               uno
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             georgeos
maintainer:         jorge.orosan@gmail.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md

executable uno
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:  Types
                  , Constants

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0,
                      random,
                      lens,
    hs-source-dirs:   app
    default-language: Haskell2010
